Potential fix to slight y-overflow on mobile iphone.

--- a/personalPortfolio/src/index.css
+++ b/personalPortfolio/src/index.css
@@ -6,7 +6,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  max-height: 100vh;
+  max-height: 90vh;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -27,7 +27,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  max-height: 100vh;
 }
 
 h1 {
